almost final changes for styling

--- a/public/stylesheets/posts/form.css
+++ b/public/stylesheets/posts/form.css
@@ -1,10 +1,10 @@
-#message-input {
+#message {
   width: 100%;
   outline: none;
   resize: none;
 }
 
-#message-input:focus {
+#message:focus {
   border: 2px solid #5c6bc0;
 }
 
