--- a/views/partials/posts/form.hbs
+++ b/views/partials/posts/form.hbs
@@ -7,9 +7,9 @@
 >
   <h2 class="titles">New Message</h2>
   <div class="form-message">
-    <label for="message-input"></label>
+    <label for="message"></label>
     <textarea
-      id="message-input"
+      id="message"
       class="form-control custom-input"
       name="message"
       rows="4"
