Add initial photo upload logic

--- a/views/profile/index.hbs
+++ b/views/profile/index.hbs
@@ -10,7 +10,7 @@
 </form>
 
 {{#if currentUser.profileImage.contentType}}
-  <img src="/profile/{{currentUser._id}}/image" alt="Profile Image">
+  <img src="/profile/{{currentUser._id}}/image" alt="Profile Image" width="200px">
 {{else}}
   <p>No profile image available</p>
 {{/if}}
