--- a/public/stylesheets/friends/index.css
+++ b/public/stylesheets/friends/index.css
@@ -33,15 +33,17 @@
 
 .username {
   font-size: x-large;
+  margin-left: 5%;
 }
 
 .pending-friendships {
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
 }
 
 .friend-actions {
   display: flex;
-  justify-content: center;
-  gap: 20%;
+  justify-content: flex-end;
+  gap: 5%;
 }
