about me styling

--- a/views/home/index.hbs
+++ b/views/home/index.hbs
@@ -1,14 +1,19 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <title>Homepage</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-
+  <title>Acebook</title>
 </head>
+  
 <body>
     <i id="dark-mode-toggle" class="fas toggle-button"></i>
     <div class="homepage-content">
 
     <div class="left-container">
-        <h1 class="title">{{title}}</h1>
+        <a href="/about"><h1 class="title">{{title}}</h1></a>
+        
         <p class="slogan">Making people's lives Betta</p>
     </div>
     <div class="right-container">
@@ -18,6 +23,21 @@
     </div>
 </div>
 </body>
+</html>
+
+
+
+
+
+
+
+
+
+
+<head>
+  
+</head>
+
 
 
 <script>
