--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -1,9 +1,13 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Your Timeline</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
-
 <body>
+
 <div class="timeline-navbar fixed-content">
   {{!-- <button id="dark-mode-toggle" class="global-button toggle-button">Toggle Dark Mode</button> --}}
   <i id="dark-mode-toggle" class="fas fa-moon toggle-button"></i>
@@ -60,6 +64,8 @@
   {{/each}}
 </div>
 </body>
+</html>
+
 
 
 <script>
