--- a/views/users/new.hbs
+++ b/views/users/new.hbs
@@ -1,7 +1,12 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <title>Signup - Create a new account</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Sign Up - Create a new account</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
+
 <body>
   <div class="banner">
     <i id="dark-mode-toggle" class="fas fa-moon toggle-button"></i>
@@ -55,6 +60,9 @@
   <p class="divert-text">Did you mean <a href="/sessions/new">login</a>?</p>
 </div>
 </body>
+</html>
+
+
 
 <script>
 // Get the dark mode toggle button element
