--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -97,6 +97,33 @@ body.dark-mode hr.line {
   background-color: white;
 }
 
+body.dark-mode .welcome {
+  color: var(--text-color);
+}
+
+body.dark-mode p.about-text {
+  color: var(--text-color);
+}
+
+body.dark-mode p.information {
+  color: var(--text-color);
+}
+
+body.dark-mode .footer {
+  color: var(--text-color);
+}
+body.dark-mode .github {
+  filter: invert(100%);
+}
+
+body.dark-mode .container-about {
+  background-color: var(--third-grey);
+}
+
+body.dark-mode legend {
+  color: white;
+}
+
 @media (max-width: 768px) {
   body.dark-mode .toggle-button {
     margin-bottom: 10px;
@@ -627,19 +654,21 @@ button:focus {
   }
 }
 
-
 /* About section */
 .about-title {
   text-align: center;
-  margin-bottom: 15px;
+  margin-bottom: 5px;
 }
 
 .container-about {
   display: grid;
   justify-items: center;
   align-items: center;
-  margin: 0vh 30vh;
+  margin: 0vh 30vh 10vh 30vh;
   text-align: center;
+  background-color: var(--main-grey);
+  padding: 20px;
+  border-radius: 40px;
 }
 
 .container p {
@@ -647,6 +676,7 @@ button:focus {
   padding: 10px;
   text-align: center;
   width: 50%;
+  font-size: 13px;
 }
 
 .team {
@@ -663,15 +693,54 @@ img {
 /* Footer styling */
 
 .footer {
-  margin-top: 20vh;
+  margin-top: 5vh;
   text-align: center;
-  color: var(--NavyBlue)
+  color: var(--NavyBlue);
 }
 
 .photo {
-  transition:.5s;
+  transition: 0.5s;
 }
 
 .photo:hover {
-  transform:scale(1.3);
+  transform: scale(1.3);
 }
+
+/* Media Queries */
+
+@media only screen and (max-width: 768px) {
+  .container-about {
+    margin: 0 10vh;
+  }
+
+  .container p {
+    width: 100%;
+  }
+
+  .team {
+    height: 100px;
+  }
+
+  .img-container {
+    flex-wrap: wrap;
+  }
+
+  .img-container a {
+    flex-basis: 50%;
+    padding: 10px;
+  }
+}
+/* 
+@media only screen and (max-width: 480px) {
+  .container-about {
+    margin: 0 5vh;
+  }
+
+  .container p {
+    width: 100%;
+  }
+
+  .team {
+    height: 80px;
+  }
+} */
