--- a/views/posts/new.hbs
+++ b/views/posts/new.hbs
@@ -1,8 +1,13 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Create a new post</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 
+  
 <body>
     
     <div class="timeline-navbar">
@@ -62,6 +67,10 @@
 </div>
 
 </body>
+</html>
+
+
+
 
 <script>
   // Get the dark mode toggle button element
