--- a/views/profile/index.hbs
+++ b/views/profile/index.hbs
@@ -1,49 +1,321 @@
-<h1>Name</h1>
-<a href="../posts">Timeline</a>
-<form action="/sessions?_method=DELETE" method="POST">
-  <input type="submit" value="Log Out" />
-</form>
+<!doctype html>
+<html lang="en">
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>My profile</title>
+  {{!--
+  <link rel="stylesheet" href="/stylesheets/profile.css"> --}}
+  <style>
+    body {
+      background-color: rgb(238, 240, 243);
+    }
+
+    #logout_button {
+      background-color: transparent;
+      border-width: 0;
+      font-family: inherit;
+      font-size: inherit;
+      font-style: inherit;
+      font-weight: inherit;
+      line-height: inherit;
+      padding: 0;
+      color: rgb(36, 90, 247);
+      margin-right: 1rem;
+    }
+
+    #image-circle {
+      height: 200px;
+      width: 200px;
+      border: 1px solid black;
+      background-color: rgba(192, 211, 255, 0.453);
+      color: blue;
+      border-radius: 50%;
+    }
+
+    #image-square {
+      height: 60px;
+      width: 60px;
+      border: 1px solid black;
+      background-color: rgba(192, 211, 255, 0.453);
+      color: blue;
+      border-radius: 10%;
+    }
+
+    .info {
+      font-size: 1.2rem;
+    }
+
+    .heading-margin {
+      margin-bottom: 0;
+    }
+
+    .remove-button,
+    .addFriendButton,
+    .rejectFriendRequestButton,
+    .acceptFriendRequestButton {
+      font-size: 0.8rem;
+      padding: 2px 6px;
+
+    }
+
+    #non-friends {
+      margin-left: 100px;
+    }
 
 
-<div>
-  <p>Friends</p>
-  <ul class="users">
-    {{#each friends_names}}
-      <form action="/profile/remove-friend" method="POST">
-        <input type="hidden" name="friendEmail" value="{{this.email}}">
-        <li>{{this.firstName}} {{this.lastName}}<button type="submit">Remove Friend</button></li>
-      </form>
-    {{else}}
-      <li>No friends found.</li>
-    {{/each}}
-  </ul>
-</div>
+    ;
+  </style>
+</head>
 
-<div>
-  <p>Users</p>
-  <ul class="users">
-    {{#each nonFriends}}
-      <form class="addFriendForm" data-friend-email="{{this.email}}">
-        <input type="hidden" name="friendEmail" value="{{this.email}}">
-        <li>{{this.firstName}} {{this.lastName}}
-            {{#if this.friendRequested }}
-              <button class="addFriendButton" type="button" disabled>Friend Request Sent</button>
+<body>
+  {{!-- navbar --}}
+
+  <div class="container-fluid px-0">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary shadow-sm border-bottom ">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="sessions/new">
+          <img src="/images/logo.png" alt="Logo" width="100" height="40" class="d-inline-block align-text-top">
+
+        </a>
+        <a href="../posts" class="text-decoration-none">Timeline</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarNavAltMarkup">
+          <form action='/sessions?_method=DELETE' method='POST'>
+            <input id="logout_button" type="submit" value="Log Out">
+          </form>
+        </div>
+
+      </div>
+    </nav>
+
+  </div>
+
+  {{!-- profile name/email --}}
+
+  <div class="row py-4">
+    <div class="col-md-6">
+      <div class="row pt-5">
+        <div class="col-md-6 d-flex justify-content-center">
+          <div id="image-circle"></div> 
+        </div>
+
+        <div class="col-md-6">
+          <span>
+            <h4 class="heading-margin">First Name </h4>
+            <p class="info">{{user.firstName}}</p>
+          </span>
+
+          <span>
+            <h4 class="heading-margin">Last Name </h4>
+            <p class="info">{{user.lastName}}</p>
+          </span>
+
+          <span>
+            <h4 class="heading-margin">Email</h4>
+            <p class="info">{{user.email}}</p>
+          </span>
+
+        </div>
+      </div>
+
+    </div>
+
+
+    <div class="col-md-6">
+      <div class="row">
+        <div class="col-md-8">
+          <h3>Friends</h3>
+          <div class="users border rounded shadow-sm bg-light-subtle">
+            {{#each friends_names}}
+            <div class="my-3 px-4">
+              <form action="/profile/remove-friend" method="POST">
+
+                <div class="row">
+
+
+                  <div class="col-md-8 border rounded shadow-sm bg-light-subtle py-3">
+                    <div class="row">
+                      <div class="col-md-4">
+                        <div id="image-square"></div>
+                      </div>
+                      <div class="col-md-8 ps-0">
+                        <input type="hidden" name="friendEmail" value="{{this.email}}">
+                        {{this.firstName}} {{this.lastName}}
+                        <br>
+                        <button type="submit" class="remove-button btn btn-outline-primary shadow-sm">Remove
+                          Friend</button>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="col-md-4"></div>
+                </div>
+
+
+
+              </form>
+            </div>
             {{else}}
-              <button class="addFriendButton" type="button">Add Friend</button>
-            {{/if}}
-        </li>
-      </form>
-    
-    {{/each}}
-  </ul>
-</div>
+            No friends found.
+            {{/each}}
+          </div>
+        </div>
 
-<div class="friendRequests">
-  <h2>Friend Requests</h2>
-  {{#if friendRequests.length}}
-    <ul>
-      {{#each friendRequests}}
-        <li data-email="{{this.email}}">{{this.firstName}} {{this.lastName}} ({{this.email}})
+        <div class="col-md-4"></div>
+
+      </div>
+
+    </div>
+
+
+
+
+
+
+
+
+    <div class="row py-4">
+
+      <div class="col-md-6 " id="non-friends">
+        <div class="row">
+          <div class="col-md-8">
+            <h3>People you may know</h3>
+            <div class="users border rounded shadow-sm bg-light-subtle">
+              {{#each nonFriends}}
+              <div class="my-3 px-4">
+                <form class="addFriendForm" data-friend-email="{{this.email}}">
+
+                  <div class="row">
+
+
+                    <div class="col-md-8 border rounded shadow-sm bg-light-subtle py-3">
+                      <div class="row">
+                        <div class="col-md-4">
+                          <div id="image-square"></div>
+                        </div>
+                        <div class="col-md-8 ps-0">
+                          <input type="hidden" name="friendEmail" value="{{this.email}}">
+                          {{this.firstName}} {{this.lastName}}
+                          {{#if this.friendRequested }}
+                          <br>
+                          <button class="addFriendButton btn btn-outline-primary shadow-sm" type="button"
+                            disabled>Friend Request Sent</button>
+                          {{else}}
+                          <br>
+                          <button class="addFriendButton btn btn-outline-primary shadow-sm" type="button">Add
+                            Friend</button>
+                          {{/if}}
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="col-md-4"></div>
+                  </div>
+
+
+
+                </form>
+              </div>
+
+              {{/each}}
+            </div>
+          </div>
+
+          <div class="col-md-4"></div>
+
+        </div>
+
+        <div class="col-md-6">
+        </div>
+
+      </div>
+
+    </div>
+
+
+
+
+    {{!-- Friend Requests --}}
+
+
+
+    <div class="row">
+
+      <div class="col-6 " id="non-friends">
+        <div class="friendRequests">
+          <div class="row">
+            <div class="col-8">
+              <h2>Friend Requests</h2>
+              {{#if friendRequests.length}}
+
+              <section class="border rounded shadow-sm bg-light-subtle">
+                {{#each friendRequests}}
+                <div class="row">
+                  <div class="col-8 border rounded m-4 py-3">
+                    <div class="row">
+                      <div class="col-4 ">
+                        <div id="image-square"></div>
+                      </div>
+                      <div class="col-8 ps-0">
+                        <div data-email="{{this.email}}">
+
+                          {{this.firstName}} {{this.lastName}} ({{this.email}})
+                          <div class="d-flex inline">
+                          <form class="acceptFriendRequestForm" action="/profile/accept-friend-request" method="POST">
+                            <input type="hidden" name="friendEmail" value="{{this.email}}">
+                            <button class="acceptFriendRequestButton btn btn-outline-primary shadow-sm"
+                              type="submit">Accept</button>
+                          </form>
+                          <form class="rejectFriendRequestForm mx-2" action="/profile/reject-friend-request" method="POST">
+                            <input type="hidden" name="friendEmail" value="{{this.email}}">
+                            <button class="rejectFriendRequestButton btn btn-outline-danger shadow-sm"
+                              type="submit">Reject</button>
+                          </form>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-4"></div>
+                </div>
+                {{/each}}
+              </section>
+
+              {{else}}
+              <p>No pending friend requests.</p>
+              {{/if}}
+            </div>
+          </div>
+
+          <div class="col-4"></div>
+
+        </div>
+
+      </div>
+
+
+
+
+      <div class="col-6"></div>
+
+    </div>
+
+
+
+
+    {{!-- <div class="friendRequests">
+      <h2>Friend Requests</h2>
+      {{#if friendRequests.length}}
+      <ul>
+        {{#each friendRequests}}
+        <li data-email="{{this.email}}">
+          {{this.firstName}} {{this.lastName}} ({{this.email}})
           <form class="acceptFriendRequestForm" action="/profile/accept-friend-request" method="POST">
             <input type="hidden" name="friendEmail" value="{{this.email}}">
             <button class="acceptFriendRequestButton" type="submit">Accept</button>
@@ -53,53 +325,61 @@
             <button class="rejectFriendRequestButton" type="submit">Reject</button>
           </form>
         </li>
-      {{/each}}
-    </ul>
-  {{else}}
-    <p>No pending friend requests.</p>
-  {{/if}}
-</div>
+        {{/each}}
+      </ul>
+      {{else}}
+      <p>No pending friend requests.</p>
+      {{/if}}
+    </div> --}}
 
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script>
-  // Handle Add Friend button click event
-  $('.addFriendButton').click(function () {
-    const friendEmail = $(this).closest('.addFriendForm').data('friend-email');
-    const addButton = $(this);
 
-    $.post('/profile/add-friend', { friendEmail: friendEmail }, function (response) {
-      if (response.message === 'Friend request sent') {
-        addButton.text('Friend Request Sent').prop('disabled', true);
-      } else {
-        // Handle other response messages if needed
-      }
-    });
-  });
 
-  // Handle Accept Friend Request form submission
-  $('.friendRequests').on('submit', '.acceptFriendRequestForm', function (event) {
-    event.preventDefault(); // Prevent the default form submission
 
-    const form = $(this);
-    const friendEmail = form.find('input[name="friendEmail"]').val();
-    const listItem = form.closest('li');
 
-    $.post('/profile/accept-friend-request', { friendEmail: friendEmail }, function (response) {
-      if (response.success) {
-        // Remove the accepted friend request from the list
-        listItem.remove();
 
-        // If no more friend requests, show the "No pending friend requests" message
-        const friendRequestsList = $('.friendRequests ul');
-        if (friendRequestsList.children().length === 0) {
-          friendRequestsList.append('<li>No pending friend requests.</li>');
-        }
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script>
+      // Handle Add Friend button click event
+      $('.addFriendButton').click(function () {
+        const friendEmail = $(this).closest('.addFriendForm').data('friend-email');
+        const addButton = $(this);
 
-        // Reload the page
-        location.reload();
-      } else {
-        // Handle other response messages if needed
-      }
-    });
-  });
-</script>
+        $.post('/profile/add-friend', { friendEmail: friendEmail }, function (response) {
+          if (response.message === 'Friend request sent') {
+            addButton.text('Friend Request Sent').prop('disabled', true);
+          } else {
+            // Handle other response messages if needed
+          }
+        });
+      });
+
+      // Handle Accept Friend Request form submission
+      $('.friendRequests').on('submit', '.acceptFriendRequestForm', function (event) {
+        event.preventDefault(); // Prevent the default form submission
+
+        const form = $(this);
+        const friendEmail = form.find('input[name="friendEmail"]').val();
+        const listItem = form.closest('li');
+
+        $.post('/profile/accept-friend-request', { friendEmail: friendEmail }, function (response) {
+          if (response.success) {
+            // Remove the accepted friend request from the list
+            listItem.remove();
+
+            // If no more friend requests, show the "No pending friend requests" message
+            const friendRequestsList = $('.friendRequests ul');
+            if (friendRequestsList.children().length === 0) {
+              friendRequestsList.append('<li>No pending friend requests.</li>');
+            }
+
+            // Reload the page
+            location.reload();
+          } else {
+            // Handle other response messages if needed
+          }
+        });
+      });
+    </script>
+</body>
+
+</html>
