delete method added , new sort on profile page, new date format added to all post related pages

--- a/views/posts/edit.hbs
+++ b/views/posts/edit.hbs
@@ -13,12 +13,12 @@
 <form action="/posts/{{post._id}}" method="POST">
   <label for="content">Edit Post:</label>
   <textarea id="content" name="content">{{post.message}}</textarea>
-  <button type="submit">Save</button>
+  <button type="submit">Update Post</button>
 </form>
 
 <br>
 
-<form action="/posts/{{post._id}}" method="POST">
+<form action="/posts/{{post._id}}/delete" method="POST">
   <label for="content">Delete Post:</label>
   {{!-- <textarea id="content" name="content">{{post.message}}</textarea> --}}
   <button type="submit">Delete Post</button>
