--- a/views/users/profile.hbs
+++ b/views/users/profile.hbs
@@ -2,6 +2,14 @@
 <p>Username: {{ user.username }}</p>
 <p>Email: {{ user.email }}</p>
 
+
+{{!-- <div class="deletion-message">
+    {{#if req.params.deleted}}
+      {{"successfully deleted"}}
+    {{/if}}
+</div> --}}
+<br>
+
 {{!-- add all other profile information needed above--}}
 
 {{!-- <h2>Create Post</h2>
