--- a/views/posts/show.hbs
+++ b/views/posts/show.hbs
@@ -42,9 +42,9 @@
 </ul>
 
 <form action="/posts/{{ post._id }}/comments" method="POST">
-  <textarea name="message" input="text" placeholder="Leave a comment"></textarea>
+  <textarea name="message" placeholder="Leave a comment"></textarea>
   {{#if error}}
-    <p style="color: red;">{{ error }}</p> <!-- Display the error message if it exists -->
+    <p style="color: red;">{{ error }}</p> 
   {{/if}}
   <button type="submit">Submit</button>
 </form>
