--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -755,7 +755,7 @@ img {
   display: grid;
   justify-items: center;
   align-items: center;
-  margin: 0vh 30vh;
+  margin: 0vh 30vh 10vh 30vh;
   text-align: center;
 }
 
@@ -764,6 +764,7 @@ img {
   padding: 10px;
   text-align: center;
   width: 50%;
+  font-size: 13px;
 }
 
 .team {
@@ -780,15 +781,40 @@ img {
 /* Footer styling */
 
 .footer {
-  margin-top: 20vh;
+  margin-top: 5vh;
   text-align: center;
-  color: var(--NavyBlue)
+  color: var(--NavyBlue);
 }
 
 .photo {
-  transition:.5s;
+  transition: 0.5s;
 }
 
 .photo:hover {
-  transform:scale(1.3);
+  transform: scale(1.3);
+}
+
+/* Media Queries */
+
+@media only screen and (max-width: 768px) {
+  .container-about {
+    margin: 0 10vh;
+  }
+
+  .container p {
+    width: 100%;
+  }
+
+  .team {
+    height: 100px;
+  }
+
+  .img-container {
+    flex-wrap: wrap;
+  }
+
+  .img-container a {
+    flex-basis: 50%;
+    padding: 10px;
+  }
 }
