put in names on profile page

--- a/views/profile/index.hbs
+++ b/views/profile/index.hbs
@@ -122,17 +122,17 @@
         <div class="col-md-6">
           <span>
             <h4 class="heading-margin">First Name </h4>
-            <p class="info">{{user.firstName}}</p>
+            <p class="info">{{currentUser.firstName}}</p>
           </span>
 
           <span>
             <h4 class="heading-margin">Last Name </h4>
-            <p class="info">{{user.lastName}}</p>
+            <p class="info">{{currentUser.lastName}}</p>
           </span>
 
           <span>
             <h4 class="heading-margin">Email</h4>
-            <p class="info">{{user.email}}</p>
+            <p class="info">{{currentUser.email}}</p>
           </span>
 
         </div>
