--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -1,4 +1,4 @@
-<h1>Timeline</h1>
+<h1>Posts Timeline</h1>
 <ul class="posts"> 
   {{#each posts}}
     {{!-- {{#if _id in this.like}} --}}
@@ -18,4 +18,9 @@
   {{/each}}
 </ul>
 
-<a class="new-post-link" href="/posts/new">New post</a>
+
+{{!-- ♤
+♠ --}}
+
+
+{{!-- <a class="new-post-link" href="/posts/new">New post</a> --}}
