--- a/views/users/profile.hbs
+++ b/views/users/profile.hbs
@@ -18,7 +18,7 @@
   <button type="submit">Post</button>
 </form> --}}
 
-<a class="new-post-link" href="/posts/new">New post</a>
+{{!-- <a class="new-post-link" href="/posts/new">New post</a> --}}
 
 <h2>Posts:</h2>
 <ul>
