--- a/views/partials/posts/post.hbs
+++ b/views/partials/posts/post.hbs
@@ -5,7 +5,10 @@
         <button type="submit" class="btn btn-primary btn-sm float-right" id="submit">Poke</button>
       </form>
     {{/unless}}
-  <p class="post-author">{{post.username}} said</p>
+  <p class="post-author">{{#if post.user.image}}
+      <img src="{{post.user.image}}" class="avatar">
+    {{/if}}
+{{post.username}} said</p>    
   <h3 class="post-message" id="message-{{post.id}}">{{post.message}}</h3>
   <p class="post-date">Posted on {{post.formattedCreatedAt}}</p>
   <div class="actions">
@@ -13,12 +16,6 @@
     {{#if post.image}}
       <img class="post-image" src="{{post.image}}" height="300px" width="300px">
     {{/if}}
-
-    {{#if post.user.image}}
-      <img src="{{post.user.image}}" class="avatar">
-    {{/if}}
-
-
     <ul class="post-comment" id="comments-{{post.id}}">
       {{#each post.comments}}
         {{> posts/comment this}}
