--- a/views/about/about.hbs
+++ b/views/about/about.hbs
@@ -6,7 +6,7 @@
 </head>
 
 
-
+<body>
 <div class="banner">
       <i id="dark-mode-toggle" class="fas fa-moon toggle-button"></i>
   <a href="/users/new"><h1 class="title">Acebook</h1></a>
@@ -87,11 +87,7 @@ So, what are you waiting for? Dive into Acebook, where unicorns roam free, the l
 
 </div>
 
-
-
-
-
-    <script>
+      <script>
 // Get the dark mode toggle button element
 const darkModeToggle = document.getElementById('dark-mode-toggle');
 
@@ -123,3 +119,10 @@ darkModeToggle.addEventListener('click', () => {
 });
 
 </script> 
+</body>
+
+
+
+
+
+
