--- a/views/users/new.hbs
+++ b/views/users/new.hbs
@@ -29,7 +29,7 @@
     <input id="email" type="email" name="email" placeholder="email" required class="input-box" aria-label="Type email address here" tabindex="3">
     <h2 class="visually-hidden">Password Requirements</h2>
     <ul class="password-requirement" aria-label="Password requirements">
-      Passwords must contain:
+    Passwords must contain:
       <li role="listitem">At least 8 characters</li>
       <li role="listitem">At least one letter (A-Z)</li>
       <li role="listitem">At least one number</li> 
@@ -39,19 +39,19 @@
     <input id="password" type="password" name="password" placeholder="password" required class="input-box" aria-label="Type password here" tabindex="4">
     <label for="confirmPassword">Confirm Password:</label>
     <input id="confirmPassword" type="password" name="confirmPassword" placeholder="confirm password" required class="input-box" aria-label="Retype password here" tabindex="5">
-    <fieldset>
+    <fieldset class="icon-select-box">
       <legend>Choose an icon:</legend>
       <div class="icon-select">
-      <input type="radio" name="icon" value=":)" class="icon-radio" tabindex="6"><div class="icon">:)</div>
-      <input type="radio" name="icon" value=":o" class="icon-radio" tabindex="7"><div class="icon">:o</div>
-      <input type="radio" name="icon" value=":D" class="icon-radio" tabindex="8"><div class="icon">:D</div>
-      <input type="radio" name="icon" value=":3" class="icon-radio" tabindex="9"><div class="icon">:3</div>
+      <input type="radio" name="icon" value=":)" class="icon-radio" tabindex="6" required><div class="icon choose-icon">:)</div>
+      <input type="radio" name="icon" value=":o" class="icon-radio" tabindex="7"><div class="icon choose-icon">:o</div>
+      <input type="radio" name="icon" value=":D" class="icon-radio" tabindex="8"><div class="icon choose-icon">:D</div>
+      <input type="radio" name="icon" value=":3" class="icon-radio" tabindex="9"><div class="icon choose-icon">:3</div>
     </div>
       <div class="icon-select">
-        <input type="radio" name="icon" value=";)" class="icon-radio" tabindex="10"><div class="icon">;)</div>
-        <input type="radio" name="icon" value=":b" class="icon-radio" tabindex="11"><div class="icon">:b</div>
-        <input type="radio" name="icon" value=":s" class="icon-radio" tabindex="12"><div class="icon">:s</div>
-        <input type="radio" name="icon" value=":|" class="icon-radio" tabindex="13"><div class="icon">:|</div>
+        <input type="radio" name="icon" value=";)" class="icon-radio" tabindex="10"><div class="icon choose-icon">;)</div>
+        <input type="radio" name="icon" value=":b" class="icon-radio" tabindex="11"><div class="icon choose-icon">:b</div>
+        <input type="radio" name="icon" value=":s" class="icon-radio" tabindex="12"><div class="icon choose-icon">:s</div>
+        <input type="radio" name="icon" value=":|" class="icon-radio" tabindex="13"><div class="icon choose-icon">:|</div>
       </div>
     </fieldset>
     <button id="submit" type="submit" class="global-button" tabindex="14">Submit</button>
