--- a/views/profile/index.hbs
+++ b/views/profile/index.hbs
@@ -29,10 +29,11 @@
     #image-circle {
       height: 200px;
       width: 200px;
-      border: 1px solid black;
+
       background-color: rgba(192, 211, 255, 0.453);
       color: blue;
       border-radius: 50%;
+
     }
 
     #image-square {
@@ -65,7 +66,9 @@
       margin-left: 100px;
     }
 
-
+.upload-button {
+  margin-left: 100px
+}
     ;
   </style>
 </head>
@@ -103,22 +106,14 @@
     <div class="col-md-6">
       <div class="row pt-5">
         <div class="col-md-6 d-flex justify-content-center">
-          <div id="image-circle"></div> 
-        </div>
-{{!-- 
-
-<form id="new-post-form" action="/profile" method="post" enctype="multipart/form-data">
-  <input type="file" name="profileImage" id="file" >
-  <input type="submit">
-</form>
-
-{{#if currentUser.profileImage.contentType}}
-  <img src="/profile/{{currentUser._id}}/image" alt="Profile Image" width="200px">
+          <div id="image-circle" class="shadow border">{{#if currentUser.profileImage.contentType}}
+  <img id="image-circle"  src="/profile/{{currentUser._id}}/image" alt="Profile Image" width="200px">
 {{else}}
   <p>No profile image available</p>
-{{/if}}
+{{/if}}</div> 
+ 
+        </div>
 
---}}
         <div class="col-md-6">
           <span>
             <h4 class="heading-margin">First Name </h4>
@@ -188,7 +183,12 @@
 
     </div>
 
-
+<div class="row upload-button"> 
+  <form id="new-post-form" action="/profile" method="post" enctype="multipart/form-data">
+  <input type="file" name="profileImage" id="file" >
+  <input type="submit" value="Upload photo">
+</form>
+</div>
 
 
 
