update models and PostController.create with matching test updates

--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -2,6 +2,7 @@
 <ul class="posts">
   {{#each posts}}
   <li>{{this.message}}</li> 
+  <li>posted by {{this.author}}</li>
   <li>{{this.likes}} likes</li>
   {{/each}}
 </ul>
