--- a/views/users/new.hbs
+++ b/views/users/new.hbs
@@ -1,4 +1,7 @@
+<p class="sign-up">Sign up to {{title}}</p>
 <form id="new-user-form" action="/users" method="post">
+  <label for="username">Username: </label>
+  <input id="username" type="name" name="username" value="">
   <label for="email">Email: </label>
   <input id="email" type="email" name="email" value="">
   <label for="password">Password: </label>
